--- a/notebooks/positive_prior_vs_f1_score_plot.ipynb
+++ b/notebooks/positive_prior_vs_f1_score_plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,16 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
+    "import nci_eval.metrics as metrics\n",
     "from nci_eval.plots import PositivePriorF1ScorePlot, PositivePriorPrecisionPlot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "PositivePrevalence-Precision (P3) plots\n",
+    "========"
    ]
   },
   {
@@ -64,6 +73,40 @@
     "                                classifiers_sigma_fpr=[0.0005, 0.0005],\n",
     "                                positive_priors=np.logspace(-6, 0, num=100),\n",
     "                                figsize=(8,3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Max width of alpha^2 confidence interval\n",
+    "===="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The interval is widest at positive prevalence 0.00145 width the width of 0.314\n"
+     ]
+    }
+   ],
+   "source": [
+    "positive_prior, delta = metrics.max_width_of_precision_confidence_interval(0.6, 0.001, 0.06, 0.0005)\n",
+    "print(\"The interval is widest at positive prevalence %.5f width the width of %.3f\" % (positive_prior, delta))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Positive-Prevalence-F1Score plot\n",
+    "===="
    ]
   },
   {
