#1 refactor to builders and doc comments

--- a/notebooks/plot_pr_auc.ipynb
+++ b/notebooks/plot_pr_auc.ipynb
@@ -52,11 +52,10 @@
     }
    ],
    "source": [
-    "fig = RocPlot().plot(classifiers_tprs=[cls_one_tprs, cls_two_tprs],\n",
-    "               classifiers_fprs=[cls_one_fprs, cls_two_fprs],\n",
-    "               classifiers_names=[\"Classifier 1\", \"Classifier 2\"],\n",
-    "               log_x_axis=False,\n",
-    "               figsize=(6, 4))"
+    "fig = RocPlot() \\\n",
+    "    .add(cls_one_tprs, cls_one_fprs, \"Classifier 1\") \\\n",
+    "    .add(cls_two_tprs, cls_two_fprs, \"Classifier 2\") \\\n",
+    "    .plot(log_x_axis=False, figsize=(6, 4))"
    ]
   },
   {
@@ -76,11 +75,10 @@
     }
    ],
    "source": [
-    "fig = RocPlot().plot(classifiers_tprs=[cls_one_tprs, cls_two_tprs],\n",
-    "               classifiers_fprs=[cls_one_fprs, cls_two_fprs],\n",
-    "               classifiers_names=[\"Classifier 1\", \"Classifier 2\"],\n",
-    "               log_x_axis=True,\n",
-    "               figsize=(6, 4))"
+    "fig = RocPlot() \\\n",
+    "    .add(cls_one_tprs, cls_one_fprs, \"Classifier 1\") \\\n",
+    "    .add(cls_two_tprs, cls_two_fprs, \"Classifier 2\") \\\n",
+    "    .plot(log_x_axis=True, figsize=(6, 4))"
    ]
   },
   {
@@ -100,16 +98,15 @@
     }
    ],
    "source": [
-    "fig = PrecisionRecallPlot().plot(classifiers_tprs=[cls_one_tprs, cls_two_tprs],\n",
-    "               classifiers_fprs=[cls_one_fprs, cls_two_fprs],\n",
-    "               classifiers_names=[\"Classifier 1\", \"Classifier 2\"],\n",
-    "               positive_prior=0.1,\n",
-    "               figsize=(6, 4))"
+    "fig = PrecisionRecallPlot() \\\n",
+    "    .add(cls_one_tprs, cls_one_fprs, \"Classifier 1\") \\\n",
+    "    .add(cls_two_tprs, cls_two_fprs, \"Classifier 2\") \\\n",
+    "    .plot(positive_prior=0.1, figsize=(6, 4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,16 +121,15 @@
     }
    ],
    "source": [
-    "fig = PrecisionRecallPlot().plot(classifiers_tprs=[cls_one_tprs, cls_two_tprs],\n",
-    "               classifiers_fprs=[cls_one_fprs, cls_two_fprs],\n",
-    "               classifiers_names=[\"Classifier 1\", \"Classifier 2\"],\n",
-    "               positive_prior=0.001,\n",
-    "               figsize=(6, 4))"
+    "fig = PrecisionRecallPlot() \\\n",
+    "    .add(cls_one_tprs, cls_one_fprs, \"Classifier 1\") \\\n",
+    "    .add(cls_two_tprs, cls_two_fprs, \"Classifier 2\") \\\n",
+    "    .plot(positive_prior=0.001, figsize=(6, 4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -148,10 +144,10 @@
     }
    ],
    "source": [
-    "fig = PositivePriorPraucPlot().plot(classifiers_tprs=[cls_one_tprs, cls_two_tprs],\n",
-    "               classifiers_fprs=[cls_one_fprs, cls_two_fprs],\n",
-    "               classifiers_names=[\"Classifier 1\", \"Classifier 2\"],\n",
-    "               positive_priors=np.logspace(-6, 0, 500))"
+    "fig = PositivePriorPraucPlot() \\\n",
+    "    .add(cls_one_tprs, cls_one_fprs, \"Classifier 1\") \\\n",
+    "    .add(cls_two_tprs, cls_two_fprs, \"Classifier 2\") \\\n",
+    "    .plot(positive_priors=np.logspace(-6, 0, 500))"
    ]
   }
  ],
