--- a/notebooks/positive_prior_vs_f1_score_plot.ipynb
+++ b/notebooks/positive_prior_vs_f1_score_plot.ipynb
@@ -75,7 +75,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Max width of alpha^2 confidence interval\n",
+    "Max width ($\\Delta$) of the UB($\\eta$) - LB($\\eta$) confidence interval \n",
     "===="
    ]
   },
