added conf level estimation to notebook

--- a/notebooks/positive_prior_vs_f1_score_plot.ipynb
+++ b/notebooks/positive_prior_vs_f1_score_plot.ipynb
@@ -101,6 +101,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Estimation of confidence level of UB($\\eta$) - LB($\\eta$) interval\n",
+    "======\n",
+    "\n",
+    "The confidence level is at least alpha^2 (which if we assume that erros of TPR and FPR are distributed normally corresponds to 0.68^2 from the 68–95–99.7 rule). However, the exact confidence level can be estimated by a Monte Carlo  sampling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The estimated confidence level is 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "conf_level = metrics.conf_level_for_confidence_interval(0.6, 0.001, 0.06, 0.0005, positive_prior, 2000)\n",
+    "print(\"The estimated confidence level is %.2f\" % conf_level)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Positive-Prevalence-F1Score plot\n",
     "===="
    ]
