use pip in notebooks

--- a/notebooks/positive_prior_vs_f1_score_plot.ipynb
+++ b/notebooks/positive_prior_vs_f1_score_plot.ipynb
@@ -8,11 +8,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import numpy as np\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
-    "    \n",
+    "import numpy as np\n"
     "import nci_eval.metrics as metrics\n",
     "from nci_eval.plots import PositivePriorF1ScorePlot, PositivePriorPrecisionPlot"
    ]
