--- a/notebooks/positive_prior_vs_f1_score_plot.ipynb
+++ b/notebooks/positive_prior_vs_f1_score_plot.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import numpy as np\n"
+    "import numpy as np\n",
     "import nci_eval.metrics as metrics\n",
     "from nci_eval.plots import PositivePriorF1ScorePlot, PositivePriorPrecisionPlot"
    ]
